--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width : 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -15,10 +15,10 @@
   }
 
   .custom-button {
-    width: 80%;
+    width:80%;
     opacity: 0.7;
     position: absolute;
-    top: 255px;
+    top:255px;
     display: none;
   }
 
@@ -27,7 +27,7 @@
       opacity: 0.8;
     }
 
-    .custom-button {
+    .custom-button{
       opacity: 0.85;
       display: flex;
     }
